fixed mobile stretched images

--- a/mobileStyles.css
+++ b/mobileStyles.css
@@ -36,7 +36,7 @@
         font-size: 14px;
     }
 
-    .skills .scroller, .langImage, .scroller img {
+    .skills .scroller {
         width: 100%;
         max-width: 300px;
         margin: 10px auto; /* Center and space out the items */
